Document patients REST resource
